# coral

./: .dockerignore  .env.example  .gitignore  Cargo.docker.toml  Cargo.toml  Dockerfile  docker-bake.hcl  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-verify.yml  deploy.yml
coral-web/: package-lock.json  package.json
coral-web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
coral-web/src/components/: OceanBackground.tsx  PlayerNav.tsx
crates/clients/: Cargo.toml
crates/clients/src/: error.rs  hypixel.rs  lib.rs  mojang.rs  ratelimit.rs  skin.rs
crates/coral-admin/: Cargo.toml
crates/coral-admin/src/: auth.rs  main.rs  state.rs
crates/coral-admin/src/routes/: blacklist.rs  diagnostics.rs  guilds.rs  members.rs  mod.rs  players.rs  rate_limits.rs  requests.rs  resolve.rs  snapshots.rs
crates/coral-admin/src/ui/: app.js  index.html  style.css
crates/coral-api/: Cargo.toml
crates/coral-bot/: Cargo.toml
crates/coral-bot/src/: accounts.rs  api.rs  expr.rs  interact.rs  lib.rs  main.rs  preview.rs  sync.rs
crates/coral-bot/src/commands/admin/: accounts_panel.rs  info.rs  manage.rs  mod.rs  setup.rs  stats.rs  strike.rs
crates/coral-bot/src/commands/blacklist/: channel.rs  evidence.rs  guild.rs  mod.rs  tag.rs  watch.rs
crates/coral-bot/src/commands/blacklist/reviews/: builder.rs  compose.rs  evidence.rs  mod.rs  state.rs  verdict.rs
crates/coral-bot/src/commands/stats/: bedwars.rs  duels.rs  mod.rs  overall.rs  prestiges.rs  session.rs  session_duels.rs
crates/coral-bot/src/commands/stats/bedwars/: mod.rs
crates/coral-bot/src/commands/stats/bedwars/cards/: mod.rs  overall.rs  prestiges.rs  session.rs
crates/coral-bot/src/commands/stats/duels/: mod.rs
crates/coral-bot/src/commands/stats/duels/cards/: mod.rs  overall.rs  session.rs
crates/coral-bot/src/commands/user/: dashboard.rs  guild_notifs.rs  help.rs  link.rs  mod.rs  unlink.rs
crates/coral-bot/src/events/: blacklist.rs  mod.rs
crates/coral-bot/src/framework/: mod.rs
crates/coral-bot/src/rendering/: mod.rs
crates/coral-bot/src/utils/: minecraft.rs  mod.rs
crates/coral-sync/: Cargo.toml
crates/coral-sync/src/: accounts.rs  api.rs  events.rs  interact.rs  main.rs  sync.rs
crates/coral-sync/src/commands/admin/: accounts_panel.rs  mod.rs  setup.rs
crates/coral-sync/src/commands/user/: link.rs
crates/coral-sync/src/framework/: mod.rs
crates/coral-sync/src/utils/: minecraft.rs  mod.rs
crates/coral-verify/: Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: access.rs  accounts.rs  blacklist.rs  cache.rs  delta.rs  developer_keys.rs  guild_cache.rs  guild_config.rs  guild_current.rs  guild_subscriptions.rs  lib.rs  members.rs  periods.rs  plugin_registry.rs  pool.rs  sessions.rs  starfish.rs  tag_ops.rs
crates/mc-verify/: Cargo.toml
crates/migration/: Cargo.toml
crates/render/: Cargo.toml
crates/starfish-crypto/: Cargo.toml
migrations/: 019_starfish.sql  020_refresh_tokens.sql  021_hwid_components.sql  022_rename_key_material.sql  023_plugin_registry.sql  024_plugin_management.sql  025_drop_evidence_thread.sql  027_player_tag_events.sql  028_unified_player_events.sql  029_players.sql  030_guild_tracking.sql  031_guild_current.sql  032_api_request_log.sql  033_api_request_log_detail.sql
scripts/: migrate_to_coral.py
(+121 files in other folders)
