[package]
name = "coral-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "coral-admin"
path = "src/main.rs"

[dependencies]
database = { path = "../database" }
coral-redis = { path = "../coral-redis" }

axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
