[package]
name = "coral-sync"
version.workspace = true
edition.workspace = true

[[bin]]
name = "coral-sync"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
database = { path = "../database" }
blacklist = { path = "../blacklist" }
coral-redis = { path = "../coral-redis" }

serenity.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = "0.6"
