[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hypixel = { path = "../hypixel" }
blacklist = { path = "../blacklist" }

sqlx.workspace = true
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
